Add Render deployment configuration

--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,6 @@ yarn-error.log*
 
 # Docker
 docker-compose.override.yml
+
+# Hugging Face model folder (deployed separately to HF)
+huggingface_model/
